# ch32-hal

./: Cargo.toml  build.rs  ch32v30x.svd  rust-toolchain.toml  serial_to_defmt.cmd  test.txt
examples/ch32v307/: Cargo.toml
examples/ch32v307/.cargo/: config.toml
src/: debug.rs  defmt_sdi.rs  lib.rs  usbhd.rs  usbhs.rs
src/flash/: mod.rs  v3.rs
src/otg_fs/: endpoint.rs  mod.rs
src/rcc/: v3.rs
src/usb/: mod.rs
src/usbhs/: control.rs  endpoint.rs  mod.rs
