[package]
name = "ch32v307-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = ["ch32v307vct6", "embassy", "rt"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.3.0", features = [
    "tick-hz-1_000_000",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
nb = "1.1.0"

qingke-rt = "0.2.1"
qingke = "0.2.0"
# qingke-rt = { version = "0.2.0", path = "../../../qingke/qingke-rt" }
# qingke = { version = "0.2.0", path = "../../../qingke" }

# Not working for now
# defmt = "0.3"
# defmt-rtt = "0.4"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }

panic-halt = "0.2.0"
#panic-probe = { version = "0.3", features = ["print-defmt"] }

display-interface-spi = "0.5.0"
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.1.0"
defmt = "0.3.6"



[profile.release]
#strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
#lto = true
#opt-level = "z" # Optimize for size.
debug = 2
